# study_ML

./: README.md
env/py3.9-no-gpu/: Dockerfile  docker-compose.yaml  pyproject.toml
linear-regression/: simple-regression.ipynb
mylib/: models.py
