[tool.poetry]
name = "py3.9-no-gpu"
version = "0.1.0"
description = ""
authors = ["chama"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.0"
black = "^23.9.1"
lightgbm = "^4.1.0"
matplotlib = "^3.8.0"
pandas = "^2.1.1"
scikit-learn = "^1.3.1"
scipy = "^1.11.3"
seaborn = "^0.13.0"
statsmodels = "^0.14.0"
xgboost = "^2.0.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
